--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,42 +19,50 @@ jobs:
         include:
         - build: linux
           os: ubuntu-20.04
-          go: 1.22.1
+          go: 'stable'
           archive-name: opensocks-linux-amd64.tar.gz
+          lib-archive-name: libopensocks-linux-amd64.tar.gz
         - build: linux-arm64
           os: ubuntu-20.04
-          go: 1.22.1
+          go: 'stable'
           archive-name: opensocks-linux-arm64.tar.gz
+          lib-archive-name: libopensocks-linux-arm64.tar.gz
         - build: linux-armv7
           os: ubuntu-20.04
-          go: 1.22.1
+          go: 'stable'
           archive-name: opensocks-linux-armv7.tar.gz
+          lib-archive-name: libopensocks-linux-armv7.tar.gz
         - build: linux-mipsle
           os: ubuntu-20.04
-          go: 1.22.1
+          go: 'stable'
           archive-name: opensocks-linux-mipsle.tar.gz
+          lib-archive-name: libopensocks-linux-mipsle.tar.gz
         - build: windows
           os: windows-2019
-          go: 1.22.1
+          go: 'stable'
           archive-name: opensocks-windows10-amd64.7z
+          lib-archive-name: libopensocks-windows10-amd64.7z
         - build: windows-arm64
           os: windows-2019
-          go: 1.22.1
+          go: 'stable'
           archive-name: opensocks-windows10-arm64.7z
+          lib-archive-name: libopensocks-windows10-arm64.7z
         - build: macos
           os: macos-12
-          go: 1.22.1
+          go: 'stable'
           archive-name: opensocks-macOS-amd64.tar.gz
+          lib-archive-name: libopensocks-macOS-amd64.tar.gz
         - build: macos-arm64
           os: macos-14
-          go: 1.22.1
+          go: 'stable'
           archive-name: opensocks-macOS-arm64.tar.gz
+          lib-archive-name: libopensocks-macOS-arm64.tar.gz
     steps:
     - uses: actions/checkout@v4
       with:
         submodules: 'recursive'
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
         go-version: ${{ matrix.go }}
     - name: Install dependencies
@@ -64,47 +72,69 @@ jobs:
       run: |
         if [ "${{ matrix.build }}" = "linux" ]; then
           go build -trimpath -ldflags "-s -w" -o opensocks main.go
+          go build -trimpath -ldflags "-s -w" --buildmode=c-archive -o libopensocks.a libopensocks.go
         elif [ "${{ matrix.build }}" = "linux-arm64" ]; then
-          GOOS=linux GOARCH=arm64 go build -trimpath -ldflags "-s -w" -o opensocks main.go
+          GOARCH=arm64 go build -trimpath -ldflags "-s -w" -o opensocks main.go
+          GOARCH=arm64 go build -trimpath -ldflags "-s -w" --buildmode=c-archive -o libopensocks.a libopensocks.go
         elif [ "${{ matrix.build }}" = "linux-armv7" ]; then
-          GOOS=linux GOARM=7 GOARCH=arm go build -trimpath -ldflags "-s -w" -o opensocks main.go
+          GOARM=7 GOARCH=arm go build -trimpath -ldflags "-s -w" -o opensocks main.go
+          GOARM=7 GOARCH=arm go build -trimpath -ldflags "-s -w" --buildmode=c-archive -o libopensocks.a libopensocks.go
         elif [ "${{ matrix.build }}" = "linux-mipsle" ]; then
-          GOOS=linux GOARCH=mipsle go build -trimpath -ldflags "-s -w" -o opensocks main.go
+          GOARCH=mipsle go build -trimpath -ldflags "-s -w" -o opensocks main.go
+          GOARCH=mipsle go build -trimpath -ldflags "-s -w" --buildmode=c-archive -o libopensocks.a libopensocks.go
         elif [ "${{ matrix.build }}" = "windows" ]; then
           go build -trimpath -ldflags "-s -w" -o opensocks.exe main.go
+          go build -trimpath -ldflags "-s -w" --buildmode=c-archive -o libopensocks.a libopensocks.go
         elif [ "${{ matrix.build }}" = "windows-arm64" ]; then
           GOARCH=arm64 go build -trimpath -ldflags "-s -w" -o opensocks.exe main.go
+          GOARCH=arm64 go build -trimpath -ldflags "-s -w" --buildmode=c-archive -o libopensocks.a libopensocks.go
         elif [ "${{ matrix.build }}" = "macos" ]; then
           go build -trimpath -ldflags "-s -w" -o opensocks main.go
+          go build -trimpath -ldflags "-s -w" --buildmode=c-archive -o libopensocks.a libopensocks.go
         elif [ "${{ matrix.build }}" = "macos-arm64" ]; then
           go build -trimpath -ldflags "-s -w" -o opensocks main.go
+          go build -trimpath -ldflags "-s -w" --buildmode=c-archive -o libopensocks.a libopensocks.go
         fi
     - name: Build archive
       shell: bash
       run: |
         mkdir archive
+        mkdir lib-archive
         cp LICENSE README.md archive/
+        cp LICENSE README.md lib-archive/
         # ls -lR
         if [ "${{ matrix.build }}" = "windows" -o "${{ matrix.build }}" = "windows-arm64" ]; then
           cp opensocks.exe ./archive/
           cd archive
           7z a "${{ matrix.archive-name }}" LICENSE README.md opensocks.exe
+          cd ..
+          cp libopensocks.h libopensocks.a ./lib-archive/
+          cd lib-archive
+          7z a "${{ matrix.lib-archive-name }}" LICENSE README.md libopensocks.h libopensocks.a
         else
           cp opensocks ./archive/
           cd archive
           tar -czf "${{ matrix.archive-name }}" LICENSE README.md opensocks
+          cd ..
+          cp libopensocks.a ./lib-archive/
+          cd lib-archive
+          tar -czf "${{ matrix.lib-archive-name }}" LICENSE README.md libopensocks.a
         fi
     - name: Continuous release
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/heads/')
       with:
         prerelease: false
-        files: archive/${{ matrix.archive-name }}
+        files: |
+          archive/${{ matrix.archive-name }}
+          lib-archive/${{ matrix.lib-archive-name }}
         tag_name: continuous
         
     - if: startsWith(github.ref, 'refs/tags/')
       name: Tagged release
       uses: softprops/action-gh-release@v1
       with:
-        files: archive/${{ matrix.archive-name }}
+        files: |
+          archive/${{ matrix.archive-name }}
+          lib-archive/${{ matrix.lib-archive-name }}
         name: Release build (${{ github.ref_name }})
